public/studentsubmission/Logs/demo1/[118-69-133-17][90428828][demo1][CE150569][B].c.log
Compile Error
[118-69-133-17][90428828][demo1][CE150569][B].c:3:1: error: unknown type name 'using'
 using namespace std;
 ^~~~~
[118-69-133-17][90428828][demo1][CE150569][B].c:3:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
 using namespace std;
                 ^~~
